fix: add unions
